[Views] Fix Animated App Menu Icon Color on Linux

On Linux, the system theme is different from the
default theme, which causes the icon color to be
incorrectly set.

Bug: 758384
Change-Id: I2dc6df460f0011edb57eb268640fd693590681b6
Reviewed-on: https://chromium-review.googlesource.com/634571
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497527}
Former-commit-id: 28f17b009d027726cbfac8fd07d4672c9f1f0e98